--- a/angebote/index.html
+++ b/angebote/index.html
@@ -12,7 +12,7 @@ title: "Angebote"
                <h1>Unsere Workshopformate</h1>
                
                <p class="text">
-                    Unsere Angebote richten sich zum einen an Jugendliche und außerschulische Jugendeinrichtungen, zum anderen an überregionale Jugendverbände und Träger von Jugendbildungsstätten. 
+                    Unsere Angebote richten sich zum einen an Jugendliche und außerschulische Jugendeinrichtungen, zum anderen an überregionale Jugendverb&auml;nde und Tr&auml;ger von Jugendbildungsst&auml;tten. 
                 </p>
             </div>
         </div>
@@ -27,9 +27,9 @@ title: "Angebote"
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
 
-                <h1>Für Jugendliche &amp; Jugendeinrichtungen</h1>
+                <h1>F&uuml;r Jugendliche &amp; Jugendeinrichtungen</h1>
                 <p class="text">
-                    Für Jugendliche und außerschulische Jugendeinrichtungen haben wir verschiedene Workshop- und Aktionsformate entwickelt. Eine Auswahl findet ihr hier: 
+                    F&uuml;r Jugendliche und außerschulische Jugendeinrichtungen haben wir verschiedene Workshop- und Aktionsformate entwickelt. Eine Auswahl findet ihr hier: 
                 </p><br>
 
                 <h3>Workshops Workshops Workshops</h3>
@@ -43,7 +43,7 @@ title: "Angebote"
                         <div id="collapseOne" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <p>
-                                    Skandale streuen und aufdecken – Als fiktive Nachrichtenagenturen versucht ihr eure Konkurrenz hinters Licht zu führen. Wer schafft es alternative Fakten am glaubhaftesten zu verpacken und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! 
+                                    Skandale streuen und aufdecken – Als fiktive Nachrichtenagenturen versucht ihr eure Konkurrenz hinters Licht zu f&uuml;hren. Wer schafft es alternative Fakten am glaubhaftesten zu verpacken und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! 
                                     <br>
                                     <b>Themen: </b> Medienanalyse und Fake News</b><br>
                                     <b>Prinzip: </b> <a class="highlight-grey" href="https://de.wikipedia.org/wiki/Simulationsspiel">Simulationsspiel/Gruppenspiel</a><br>
@@ -61,7 +61,7 @@ title: "Angebote"
                         <div id="collapseTwo" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <p>
-                                    Argumente gegen Trolle - ihr verwandelt euch in diesem Workshop in digitale Abenteuer-Gruppen, die bewaffnet mit Smartphone und Tablet sowie der helfenden Stimme des Spielleiters, Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trolle helfen aber weder Schwerter noch Zauber, sondern nur gute Argumente und Redegeschick!
+                                    Argumente gegen Trolle - ihr verwandelt euch in diesem Workshop in digitale Abenteuer-Gruppen, die bewaffnet mit Smartphone und Tablet sowie der helfenden Stimme des Spielleiters, Licht in die dunklen Gew&ouml;lbe sozialer Plattformen bringen m&uuml;ssen. Gegen die dort lauernden Trolle helfen aber weder Schwerter noch Zauber, sondern nur gute Argumente und Redegeschick!
                                     <br>
                                     <b>Thema:</b> Diskussionskultur im Netz<br>
                                     <b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Pen-%26-Paper-Rollenspiel">Digitales Pen&amp;Paper-Rollenspiel</a><br>
@@ -73,14 +73,14 @@ title: "Angebote"
                     <div class="panel">
                         <h4>
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                <b>> Ungehörsam</b>
+                                <b>> Ungeh&ouml;rsam</b>
                              </a>
                         </h4>
                         <div id="collapseThree" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <p>
-                                    Gut und verrückt demonstrieren - Ihr erarbeitet die Geschichte einer fiktiven Demonstration, die je nach Entscheidung der Teilnehmenden unterschiedliche Ausgänge nehmen kann! Im (Außen-)Raum platzierte QR-Codes erzählen den Ablauf, in dem ihr entscheiden müsst, wie man sich verhält. So erschließt ihr euch Stück für Stück verschiedenste Handlungsstränge und lernt geheime Informationen an realen Plätzen zu verstecken - also doch eine reale Demonstration?<br>
-                                    <b>Thema:</b> Kreative Meinungsäußerung<br>
+                                    Gut und verr&uuml;ckt demonstrieren - Ihr erarbeitet die Geschichte einer fiktiven Demonstration, die je nach Entscheidung der Teilnehmenden unterschiedliche Ausg&auml;nge nehmen kann! Im (Außen-)Raum platzierte QR-Codes erz&auml;hlen den Ablauf, in dem ihr entscheiden m&uuml;sst, wie man sich verh&auml;lt. So erschließt ihr euch St&uuml;ck f&uuml;r St&uuml;ck verschiedenste Handlungsstr&auml;nge und lernt geheime Informationen an realen Pl&auml;tzen zu verstecken - also doch eine reale Demonstration?<br>
+                                    <b>Thema:</b> Kreative Meinungs&auml;ußerung<br>
                                     <b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Spielbuch">Digitales Spielbuch</a><br>
                                     <b>Dauer:</b> 4 Stunden bis 2 Tage
 
@@ -97,7 +97,7 @@ title: "Angebote"
                         <div id="collapseFour" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <p>
-                                    Kann man Populismus entkommen? Im Escape Game werdet ihr in einen Raum gesperrt, aus dem ihr entkommen oder eine Aufgabe erfüllen müsst. So werdet ihr zu Figuren eines real gewordenen Adventure Spiels und müsst euch im Team verständigen, um knifflige Rätsel zu lösen, die euch auch moralisch auf die Probe stellen!<br>
+                                    Kann man Populismus entkommen? Im Escape Game werdet ihr in einen Raum gesperrt, aus dem ihr entkommen oder eine Aufgabe erf&uuml;llen m&uuml;sst. So werdet ihr zu Figuren eines real gewordenen Adventure Spiels und m&uuml;sst euch im Team verst&auml;ndigen, um knifflige R&auml;tsel zu l&ouml;sen, die euch auch moralisch auf die Probe stellen!<br>
                                     <b>Thema:</b> Populismus<br>
                                     <b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Escape_Game">Escape Game</a>
                                     <br>
@@ -115,7 +115,7 @@ title: "Angebote"
                         <div id="collapseFive" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <p>
-                                    Kleine Spiele selbst gemacht – In kurzer Zeit und ohne Vorkenntnisse verwandelt ihr das, was euch gerade umtreibt und die  Frage „Was müsste man daran mal ändern?“ in digitale Spiele! In diesem Workshop erlernt ihr so nicht nur die Grundlagen des Gamedesigns, sondern auch eure Meinungen interaktiv erfahrbar zu machen.<br>
+                                    Kleine Spiele selbst gemacht – In kurzer Zeit und ohne Vorkenntnisse verwandelt ihr das, was euch gerade umtreibt und die  Frage „Was müsste man daran mal &auml;ndern?“ in digitale Spiele! In diesem Workshop erlernt ihr so nicht nur die Grundlagen des Gamedesigns, sondern auch eure Meinungen interaktiv erfahrbar zu machen.<br>
                                     <b>Thema:</b> Meinungsbildung<br>
                                     <b>Prinzip:</b> <a href="https://de.wikipedia.org/wiki/Game_Jam">Game Jam</a><br>
                                     <b>Dauer:</b> 4 Stunden bis 3 Tage<br>
@@ -136,7 +136,7 @@ title: "Angebote"
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                        <b id="Train">Train-the-Trainer:</b><br>
-                        Damit unsere Workshopangebote keine einmalige Sache bleiben, wollen wir unser Wissen weitergeben: Mit Hilfe eines Train-the-Trainer-Konzeptes könnt ihr als interessierte Mitarbeiter*innen, Pädagog*innen und Jugendliche die Workshops schnell und einfach selbst lernen und jederzeit auch ohne uns durchführen - so oft ihr wollt! Wir stehen euch dabei unterstützend zur Seite - personell wie finanziell. 
+                        Damit unsere Workshopangebote keine einmalige Sache bleiben, wollen wir unser Wissen weitergeben: Mit Hilfe eines Train-the-Trainer-Konzeptes k&ouml;nnt ihr als interessierte Mitarbeiter*innen, P&auml;dagog*innen und Jugendliche die Workshops schnell und einfach selbst lernen und jederzeit auch ohne uns durchf&uuml;hren - so oft ihr wollt! Wir stehen euch dabei unterst&uuml;tzend zur Seite - personell wie finanziell. 
                     </p>
                 </div>
             </div>
@@ -144,7 +144,7 @@ title: "Angebote"
                 <div class="fond_purple_gradient join__statement text__white">
                     <p>
                          <b id="AG">Demokratie-AGs</b> <br>
-                       Ihr habt nach den Workshops Lust bekommen, euch noch mehr mit diesen Themen zu beschäftigen? Super! Wir möchten euch dabei unterstützen, z.B. durch die Gründung einer AG in eurer Jugendeinrichtung, in der ihr zu aktuellen gesellschaftlichen und digital gestützten Themen eurer Wahl arbeiten könnt. Ein erstes Thema könnte die Bundestagswahl im September 2017 sein: Was haltet ihr davon, gemeinsam Wahl(daten)parties zu planen?
+                       Ihr habt nach den Workshops Lust bekommen, euch noch mehr mit diesen Themen zu besch&auml;ftigen? Super! Wir m&ouml;chten euch dabei unterst&uuml;tzen, z.B. durch die Gr&uuml;ndung einer AG in eurer Jugendeinrichtung, in der ihr zu aktuellen gesellschaftlichen und digital gestützten Themen eurer Wahl arbeiten k&ouml;nnt. Ein erstes Thema k&ouml;nnte die Bundestagswahl im September 2017 sein: Was haltet ihr davon, gemeinsam Wahl(daten)parties zu planen?
                      </p>
                 </div>
             </div>
@@ -152,7 +152,7 @@ title: "Angebote"
                 <div class="fond_blue_gradient join__statement text__white"> 
                     <p>
                         <b id="TV">WebTV-Format</b> <br>
-                        Wir wollen in einem WebTV-Format wöchentlich gemeinsam mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen produzieren. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt über? <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Dann meldet euch bei uns!</a></b>                
+                        Wir wollen in einem WebTV-Format w&ouml;chentlich gemeinsam mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen produzieren. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt &uuml;ber? <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Dann meldet euch bei uns!</a></b>                
                     </p>
                 </div>
             </div>
@@ -166,7 +166,7 @@ title: "Angebote"
                 <div class="fond_green_gradient join__statement text__white">
                     <p>
                         <b>Train-the-Trainer:</b> <br>
-                        Damit unsere Workshopangebote keine einmalige Sache bleiben, wollen wir unser Wissen weitergeben: Mit Hilfe eines Train-the-Trainer-Konzeptes könnt ihr als interessierte Mitarbeiter*innen, Pädagog*innen und Jugendliche die Workshops schnell und einfach selbst lernen und jederzeit auch ohne uns durchführen - so oft ihr wollt! Wir stehen euch dabei unterstützend zur Seite - personell wie finanziell. 
+                        Damit unsere Workshopangebote keine einmalige Sache bleiben, wollen wir unser Wissen weitergeben: Mit Hilfe eines Train-the-Trainer-Konzeptes k&ouml;nnt ihr als interessierte Mitarbeiter*innen, Pädagog*innen und Jugendliche die Workshops schnell und einfach selbst lernen und jederzeit auch ohne uns durchführen - so oft ihr wollt! Wir stehen euch dabei unterstützend zur Seite - personell wie finanziell. 
                     </p>
                 </div>
             </div>
@@ -174,7 +174,7 @@ title: "Angebote"
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                         <b> Demokratie-AGs</b> <br>
-                       Ihr habt nach den Workshops Lust bekommen, euch noch mehr mit diesen Themen zu beschäftigen? Super! Wir möchten euch dabei unterstützen, z.B. durch die Gründung einer AG in eurer Jugendeinrichtung, in der ihr zu aktuellen gesellschaftlichen und digital gestützten Themen eurer Wahl arbeiten könnt. Ein erstes Thema könnte die Bundestagswahl im September 2017 sein: Was haltet ihr davon, gemeinsam Wahl(daten)parties zu planen?
+                       Ihr habt nach den Workshops Lust bekommen, euch noch mehr mit diesen Themen zu beschäftigen? Super! Wir m&ouml;chten euch dabei unterstützen, z.B. durch die Gründung einer AG in eurer Jugendeinrichtung, in der ihr zu aktuellen gesellschaftlichen und digital gestützten Themen eurer Wahl arbeiten k&ouml;nnt. Ein erstes Thema k&ouml;nnte die Bundestagswahl im September 2017 sein: Was haltet ihr davon, gemeinsam Wahl(daten)parties zu planen?
                      </p>
                 </div>
             </div>
@@ -182,7 +182,7 @@ title: "Angebote"
                 <div class="fond_purple_gradient join__statement text__white">
                     <p>
                         <b> WebTV-Format</b> <br>
-                        Wir wollen in einem WebTV-Format wöchentlich gemeinsam mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen produzieren. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt über? Dann meldet euch bei uns: info@demokratielabore.de                
+                        Wir wollen in einem WebTV-Format w&ouml;chentlich gemeinsam mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen produzieren. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt über? Dann meldet euch bei uns: info@demokratielabore.de                
                     </p>
                 </div>
             </div>
@@ -195,10 +195,10 @@ title: "Angebote"
         <div class="container text__white">
             <div class="row">
                 <div class="col-lg-9 col-lg-offset-1 title">
-                    <h2>Für Jugendverbände &amp; gemeinnützige Organisationen</h2>
+                    <h2>F&uuml;r Jugendverb&auml;nde &amp; gemeinn&uuml;tzige Organisationen</h2>
                     <p>
-                        <br>Digitaler Werkzeugkasten für überregionale Jugendverbände &amp; gemeinnützige Organisationen:</br>
-                        <br> Wir wollen Träger und Einrichtungen der Kinder- und Jugendarbeit auf dem Weg in die Digitalisierung begleiten. In unserem zweitägigen Workshop experimentieren wir mit digitalen Tools und zeigen beispielsweise wie man mit Daten gute Stories erzählen kann. Dazu führen wir zunächst eine Bedarfsanalyse durch, aus deren Ergebnisse wir dann einen Workshop entwickeln. Dieser ist auf die Bedürfnisse und Fragen der Initiativen zugeschnitten und enthält einige Tipps &amp; Tools für eine gute Datenarbeit. Alle Lernmaterialien werden im Anschluss in einem „Werkzeugkoffer” frei zugänglich bereitgestellt. Mehr Infos zu digitalen Projekten und datengestützter Arbeit gibt es <a class="highlight-white" href="https://datenschule.de">hier.</a>
+                        <br>Digitaler Werkzeugkasten f&uuml;r &uuml;berregionale Jugendverb&auml;nde &amp; gemeinn&uuml;tzige Organisationen:</br>
+                        <br> Wir wollen Tr&auml;ger und Einrichtungen der Kinder- und Jugendarbeit auf dem Weg in die Digitalisierung begleiten. In unserem zweit&auml;gigen Workshop experimentieren wir mit digitalen Tools und zeigen beispielsweise wie man mit Daten gute Stories erz&auml;hlen kann. Dazu f&uuml;hren wir zun&auml;chst eine Bedarfsanalyse durch, aus deren Ergebnisse wir dann einen Workshop entwickeln. Dieser ist auf die Bed&uuml;rfnisse und Fragen der Initiativen zugeschnitten und enth&auml;lt einige Tipps &amp; Tools f&uuml;r eine gute Datenarbeit. Alle Lernmaterialien werden im Anschluss in einem „Werkzeugkoffer” frei zug&auml;nglich bereitgestellt. Mehr Infos zu digitalen Projekten und datengest&uuml;tzter Arbeit gibt es <a class="highlight-white" href="https://datenschule.de">hier.</a>
                     </p>
                 </div>
             </div>
@@ -212,7 +212,7 @@ title: "Angebote"
                 <div class="col-lg-9 col-lg-offset-1 title">
                     <h2>Materialien</h2>
                     <p class="text">
-                        Unsere Workshops, Konzepte &amp; Lernmaterialien sollen für jede*n jederzeit zugänglich, nachvollziehbar und leicht erlernbar sein. Daher veröffentlichen wir an dieser Stelle alle Materialien aus unseren Angeboten unter freier Lizenz. 
+                        Unsere Workshops, Konzepte &amp; Lernmaterialien sollen f&uuml;r jede*n jederzeit zug&auml;nglich, nachvollziehbar und leicht erlernbar sein. Daher ver&ouml;ffentlichen wir an dieser Stelle alle Materialien aus unseren Angeboten unter freier Lizenz. 
                     </p>
                 </div>
             </div>  
