--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@ title: Hello
 <div class="beneath-sections jumbotron fond__white">
     <div class="container text__black">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 title">
+            <div class="col-lg-8 col-lg-offset-2 intro">
             <img width="250" class="img-center" src="/static/img/logo_bold.svg">
+                <h2>Digital ist besser! </h2>
                 <p>
-                   <br> Die Demokratielabore sind ein Modellprojekt der <a class="highlight-grey" href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom <a class="highlight-grey" href="http://www.bmfsfj.de">Bundesministerium für Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="http://www.demokratie-leben.de/">Demokratie leben!</a> gefördert wird. </br>
-                   <br> Wir führen verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch überregionalen Jugendverbände und Initiativen zusammen – deutschlandweit. </br>
+                   Die Demokratielabore sind ein Modellprojekt der <a class="highlight-grey" href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom <a class="highlight-grey" href="http://www.bmfsfj.de">Bundesministerium f&uuml;r Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="http://www.demokratie-leben.de/">Demokratie leben!</a> gef&ouml;rdert wird. </br>
+                   <br> Wir f&uuml;hren verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch &uuml;berregionalen Jugendverb&auml;nde und Initiativen zusammen – deutschlandweit. </br>
                    <a href="/projekt"><button  class="btn btn-start">Mehr erfahren!</button> </a> 
                 </p>   
             </div>
@@ -43,12 +44,12 @@ title: Hello
             <!--</div>-->
             <!--<div class="col-lg-4">-->
                 <!--<p>-->
-                  <!--...digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.-->
+                  <!--...digitale F&auml;higkeiten vermitteln, die es Kindern und Jugendlichen erm&ouml;glichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.-->
                 <!--</p>-->
             <!--</div>-->
             <!--<div class="col-lg-4">-->
                <!--<p>                    -->
-                    <!--...die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger-->
+                    <!--...die &ouml;ffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger-->
                     <!--Menschen bereichern.-->
                 <!--</p>-->
             <!--</div>-->
@@ -84,7 +85,7 @@ title: Hello
             <div id="mc_embed_signup">
                 <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate  mc-form " target="_blank" novalidate>
                     <p>
-                        Du möchtest auf dem Laufenden bleiben? <br>
+                        Du m&ouml;chtest auf dem Laufenden bleiben? <br>
                         Dann melde Dich f&uuml;r unseren Newsletter an!
                     </p>
 
