--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -15,21 +15,21 @@ title: "Mitmachen!"
             <div class="col-lg-8 col-lg-offset-2 title">
                 <h1>Wer kann bei den Demokratielaboren mitmachen?</h1>
                 <p>
-                   Mit den Demokratielaboren richten wir uns zum einen an <strong>Jugendliche</strong> zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr über Aktivismus und gesellschaftliche Teilhabe lernen wollen. <br> <a class="highlight-grey" href="#Jugendliche">☟ mehr erfahren</a>
+                   Mit den Demokratielaboren richten wir uns zum einen an <strong>Jugendliche</strong> zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr &uuml;ber Aktivismus und gesellschaftliche Teilhabe lernen wollen. <br> <a class="highlight-grey" href="#Jugendliche">☟ mehr erfahren</a>
                 </p>
 
                 <p>
-                   Zum anderen richten wir uns an <strong>pädagogische Fachkräfte und Jugendeinrichtungen</strong>, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können.<br>
+                   Zum anderen richten wir uns an <strong>p&auml;dagogische Fachkr&auml;fte und Jugendeinrichtungen</strong>, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verst&auml;ndliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu k&ouml;nnen.<br>
                    <a class="highlight-grey" href="#Jugendeinrichtung">☟ mehr erfahren</a>
                 </p>
 
                 <p>
-                   Auch als <strong>Jugendverband, Träger und Einrichtung der Kinder- und Jugendarbeit oder NGO</strong> kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. <br> 
+                   Auch als <strong>Jugendverband, Tr&auml;ger und Einrichtung der Kinder- und Jugendarbeit oder NGO</strong> kann man mitmachen und etwas &uuml;ber digitales und datengest&uuml;tzte Arbeit lernen. <br> 
                    <a class="highlight-grey" href="#Jugendverband">☟ mehr erfahren</a>
                 </p>
 
                 <p>
-                   Wichtig ist uns vor allem die Vielfalt: Wir wollen mit Jugendlichen & Einrichtungen in ganz Deutschland zusammenarbeiten. Egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld*in: <strong>Jede*r ist bei uns willkommen!</strong>
+                   Wichtig ist uns vor allem die Vielfalt: Wir wollen mit Jugendlichen &amp; Einrichtungen in ganz Deutschland zusammenarbeiten. Egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld*in: <strong>Jede*r ist bei uns willkommen!</strong>
                 </p>   
             </div>
         </div>
@@ -41,7 +41,7 @@ title: "Mitmachen!"
             <div class="col-lg-8 col-lg-offset-2 title">
                 <h2 >Als Jugendliche*r</h2>
                <p class="text">
-                    Du hast Lust, an einem unserer Workshops oder Aktionen teilzunehmen? Toll! Dann wirf am besten als erstes einen Blick auf unsere Termine, denn dort kannst du sehen, ob wir bald in deiner Nähe sind. Falls nicht, schreib uns gerne eine <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Mail</a></b> und wir schauen, ob wir z.B. in deinem Jugendclub etwas organisieren können.
+                    Du hast Lust, an einem unserer Workshops oder Aktionen teilzunehmen? Toll! Dann wirf am besten als erstes einen Blick auf unsere Termine, denn dort kannst du sehen, ob wir bald in deiner N&auml;he sind. Falls nicht, schreib uns gerne eine <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Mail</a></b> und wir schauen, ob wir z.B. in deinem Jugendclub etwas organisieren k&ouml;nnen.
                </p>
             </div>
         </div>
@@ -68,7 +68,7 @@ title: "Mitmachen!"
             <div class="fond_purple_gradient join__statement text__white">
                 <p>
                     <b> Schritt 2:</b> <br>
-                    Gemeinsam wählen wir in persönlichen Gesprächen die Workshop- und Aktionsformate aus, die ihr kennenlernen und in eurer Einrichtung anbieten möchtet. Im Anschluss vereinbaren wir die Fortbildungs- und Durchführungstermine. 
+                    Gemeinsam w&auml;hlen wir in pers&ouml;nlichen Gespr&auml;chen die Workshop- und Aktionsformate aus, die ihr kennenlernen und in eurer Einrichtung anbieten m&ouml;chtet. Im Anschluss vereinbaren wir die Fortbildungs- und Durchf&uuml;hrungstermine. 
                  </p>
             </div>
         </div>
@@ -76,7 +76,7 @@ title: "Mitmachen!"
             <div class="fond_blue_gradient join__statement text__white"> 
                 <p>
                     <b>Schritt 3: </b> <br>
-                    Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgewählten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchf&uuml;hrung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchf&uuml;hrung in eurer Einrichtung stehen wir euch deshalb gerne zur Seite und können euch f&uuml;r weitere Durchläufe sowohl umfangreiche Materialien  als auch finanzielle Unterst&uuml;tzung anbieten.         
+                    Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgew&auml;hlten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchf&uuml;hrung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchf&uuml;hrung in eurer Einrichtung stehen wir euch deshalb gerne zur Seite und k&ouml;nnen euch f&uuml;r weitere Durchl&auml;ufe sowohl umfangreiche Materialien  als auch finanzielle Unterst&uuml;tzung anbieten.         
                 </p>
             </div>
         </div>
@@ -84,7 +84,7 @@ title: "Mitmachen!"
             <div class="fond_red_gradient join__statement text__white">
                 <p>
                     <b>Wie geht es dann weiter? </b> <br>
-                    Wenn ihr mögt, helfen wir euch im weiteren Verlauf dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten einer Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities, zum Beispiel den <a class="highlight-white" href="https://codefor.de/">OK Labs der Open Knowledge Foundation</a>, geschehen. Auch hierfür stehen wir euch jederzeit persönlich und mit finanziellen Mitteln zur Verfügung.         
+                    Wenn ihr m&ouml;gt, helfen wir euch im weiteren Verlauf dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten einer Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities, zum Beispiel den <a class="highlight-white" href="https://codefor.de/">OK Labs der Open Knowledge Foundation</a>, geschehen. Auch hierf&uuml;r stehen wir euch jederzeit pers&ouml;nlich und mit finanziellen Mitteln zur Verf&uuml;gung.         
                 </p>
             </div>
         </div>
@@ -94,9 +94,9 @@ title: "Mitmachen!"
  <div class="beneath-sections jumbotron fond__white" id="Jugendverband">
     <div class="container text__black">
         <div class="col-lg-8 col-lg-offset-2 ">
-            <h2>Als Jugendverband, Träger und Einrichtung in der Kinder- und Jugendarbeit oder gemeinnützige Organisation</h2>
+            <h2>Als Jugendverband, Tr&auml;ger und Einrichtung in der Kinder- und Jugendarbeit oder gemeinn&uuml;tzige Organisation</h2>
             <p class="text">
-                Wie können Träger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweitägigen Workshop zeigen wir euch wie ihr mehr aus Daten machen könnt. Zusätzlich beraten wir gemeinnützige Organisationen, wie sie ihre digitalen Fähigkeiten vertiefen und aufbauen können. Interessiert? Dann schreibt uns eine <b><a class="highlight-grey" class="text__black" href="mailto:info@demokratielabore.de">Mail.</a></b> Weitere Infos zur digitalen Mündigkeit für gemeinnützige Akteure findet ihr auch bei der <a class="highlight-grey"  href="https://datenschule.de/">Datenschule</a>.      
+                Wie k&ouml;nnen Tr&auml;ger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweit&auml;gigen Workshop zeigen wir euch wie ihr mehr aus Daten machen k&ouml;nnt. Zus&auml;tzlich beraten wir gemeinn&uuml;tzige Organisationen, wie sie ihre digitalen F&auml;higkeiten vertiefen und aufbauen k&ouml;nnen. Interessiert? Dann schreibt uns eine <b><a class="highlight-grey" class="text__black" href="mailto:info@demokratielabore.de">Mail.</a></b> Weitere Infos zur digitalen M&uuml;ndigkeit für gemeinn&uuml;tzige Akteure findet ihr auch bei der <a class="highlight-grey"  href="https://datenschule.de/">Datenschule</a>.      
             </p>
        </div>
     </div>
