--- a/team/index.html
+++ b/team/index.html
@@ -1,10 +1,10 @@
 ---
 layout: base
-title: "Über uns"
+title: "&uuml;ber uns"
 ---
 
 
-<!-- Über uns -->
+<!-- &uuml;ber uns -->
 
 <div class="parallax"></div>
 </div>
@@ -13,10 +13,10 @@ title: "Über uns"
     <div class="container text__black">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="text-center">Über uns</h1>
+                <h1 class="text-center">&Uuml;ber uns</h1>
                 <div class="col-lg-8 col-lg-offset-2 title">
                 <p>
-                    Die <a href="https://okfn.de">Open Knowledge Foundation Deutschland</a> ist seit der Gründung 2011 ein Vorreiter und Impulsgeber im digitalen zivilgesellschaftlichen Engagement. Mit den Demokratielaboren haben wir ein Projekt ins Leben gerufen, das an der Grundidee des preisgekrönten OKF-Förderprogramms <a class="highlight-grey" href="https://jugendhackt.de">Jugend hackt</a> ansetzt: Jugendliche verschiedener Gesellschaftsgruppen zum Einsatz ihrer technischen Fähigkeiten f&uuml;r die Demokratie begeistern!
+                    Die <a href="https://okfn.de">Open Knowledge Foundation Deutschland</a> ist seit der Gr&uuml;ndung 2011 ein Vorreiter und Impulsgeber im digitalen zivilgesellschaftlichen Engagement. Mit den Demokratielaboren haben wir ein Projekt ins Leben gerufen, das an der Grundidee des preisgekrönten OKF-Förderprogramms <a class="highlight-grey" href="https://jugendhackt.de">Jugend hackt</a> ansetzt: Jugendliche verschiedener Gesellschaftsgruppen zum Einsatz ihrer technischen Fähigkeiten f&uuml;r die Demokratie begeistern!
 
                 </p>
             </div>
@@ -113,7 +113,7 @@ title: "Über uns"
     <div class="col-lg-12">
         <div class="container text__black">
             <div class="beneath-sections">
-            <h1>Datenkompetenz für Trägerorganisationen in der Jugendbildung</h1>
+            <h1>Datenkompetenz f&uuml;r Trägerorganisationen in der Jugendbildung</h1>
                 <div class="members col-lg-4">
                     <a href="mailto:helene.hahn@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/helene.jpg"></a>
                     <p>
