--- a/projekt/index.html
+++ b/projekt/index.html
@@ -13,8 +13,8 @@ title: "Projekt"
         <div class="col-lg-9 col-lg-offset-1 title">
             <h1 class="text-center">Das Projekt</h1>
             <p>
-               <br> Die Demokratielabore sind ein Modellprojekt der <a class="highlight-grey" href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom <a class="highlight-grey" href="http://www.bmfsfj.de">Bundesministerium für Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="http://www.demokratie-leben.de/">Demokratie leben!</a> gefördert wird. </br>
-               <br> Wir führen verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch überregionalen Jugendverbänden und Initiativen zusammen – deutschlandweit. </br>
+               <br> Die Demokratielabore sind ein Modellprojekt der <a class="highlight-grey" href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom <a class="highlight-grey" href="http://www.bmfsfj.de">Bundesministerium f&uuml;r Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="http://www.demokratie-leben.de/">Demokratie leben!</a> gef&ouml;rdert wird. </br>
+               <br> Wir f&uuml;hren verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch &uuml;berregionalen Jugendverb&auml;nden und Initiativen zusammen – deutschlandweit. </br>
                <a href="/projekt"><button  class="btn btn-start">Mehr erfahren!</button> </a> 
             </p>  
         </div>
@@ -26,17 +26,17 @@ title: "Projekt"
         <h2 class="title text-center">Wir wollen...</h2>
         <div class="col-md-4">
             <p class="text-left">
-                ...  Räume schaffen, in denen sich Jugendliche ausprobieren können, und sie dazu ermutigen, sich mit Hilfe von digitalen Kompetenzen, Werkzeugen & Technologien selbstbestimmt und aktiv an gesellschaftlichen Prozessen zu beteiligen.
+                ...  R&auml;ume schaffen, in denen sich Jugendliche ausprobieren k&ouml;nnen, und sie dazu ermutigen, sich mit Hilfe von digitalen Kompetenzen, Werkzeugen &amp; Technologien selbstbestimmt und aktiv an gesellschaftlichen Prozessen zu beteiligen.
             </p>
         </div>
         <div class="col-md-4">
             <p class="text-left">
-              ... in Zeiten von Fake News, Hate Speech und Populismus das Internet für und mit jungen Menschen als positiven Gestaltungsraum zurückerobern und die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven Jugendlicher bereichern.
+              ... in Zeiten von Fake News, Hate Speech und Populismus das Internet für und mit jungen Menschen als positiven Gestaltungsraum zurückerobern und die &ouml;ffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven Jugendlicher bereichern.
             </p>
         </div>
         <div class="col-md-4">
            <p class="text-left">
-              ... Mitarbeiter*innen in Jugendeinrichtungen ermöglichen, neue Zugänge zu aktuellen Themen kennenzulernen und sie dazu befähigen, unsere Formate jederzeit eigenständig und unkompliziert durchführen zu können.
+              ... Mitarbeiter*innen in Jugendeinrichtungen erm&ouml;glichen, neue Zug&auml;nge zu aktuellen Themen kennenzulernen und sie dazu bef&auml;higen, unsere Formate jederzeit eigenst&auml;ndig und unkompliziert durchf&uuml;hren zu k&ouml;nnen.
             </p>
         </div>
     </div>
@@ -49,11 +49,11 @@ title: "Projekt"
                 <h2>Unsere Angebote</h2>
             </div>
             <div class="col-lg-9 col-lg-offset-1 title">
-                <p> Für die Umsetzung unseres Vorhabens haben wir verschiedene Angebote für Jugendliche und Jugendeinrichtungen entwickelt. Dazu zählen unterschiedliche <a class="highlight-grey" href="/angebote/#Workshops">Workshops</a>, die nach einer Schulung mit Hilfe unseres <a class="highlight-grey"href="/angebote/#Train">Train-the-Trainers-Konzeptes</a> direkt an pädagogische Fachkräfte und engagierte Jugendliche weitergegeben werden. 
+                <p> F&uuml;r die Umsetzung unseres Vorhabens haben wir verschiedene Angebote f&uuml;r Jugendliche und Jugendeinrichtungen entwickelt. Dazu z&auml;hlen unterschiedliche <a class="highlight-grey" href="/angebote/#Workshops">Workshops</a>, die nach einer Schulung mit Hilfe unseres <a class="highlight-grey"href="/angebote/#Train">Train-the-Trainers-Konzeptes</a> direkt an p&auml;dagogische Fachkr&auml;fte und engagierte Jugendliche weitergegeben werden. 
                 <br><br> 
-                Wir möchten auch das Communitybuilding fördern und bieten Hilfe bei der Entstehung von <a href="/angebote/#AG">Demokratie-AGs</a> in Jugendeinrichtungen an. In unserem <a class="highlight-grey" href="/angebote/#TV">WebTV-Channel</a> gibt es außerdem regelmäßig Sendungen zu netzpolitischen und gesellschaftlichen Themen, die die Jugendlichen selbst mitgestalten können. 
+                Wir m&ouml;chten auch das Communitybuilding f&ouml;rdern und bieten Hilfe bei der Entstehung von <a href="/angebote/#AG">Demokratie-AGs</a> in Jugendeinrichtungen an. In unserem <a class="highlight-grey" href="/angebote/#TV">WebTV-Channel</a> gibt es außerdem regelm&auml;ßig Sendungen zu netzpolitischen und gesellschaftlichen Themen, die die Jugendlichen selbst mitgestalten k&ouml;nnen. 
                 <br><br>  
-                Überregionalen Jugendverbänden und Initiativen bieten wir die Möglichkeit bei einem <a class="highlight-grey" href="/angebote/#WS">Workshop</a> zum Thema Daten und Digitalisierung Tipps, Tricks und Tools für ihre eigenen digitalen Projekte kennenzulernen. <br> 
+                &Uuml;berregionalen Jugendverb&auml;nden und Initiativen bieten wir die M&ouml;glichkeit bei einem <a class="highlight-grey" href="/angebote/#WS">Workshop</a> zum Thema Daten und Digitalisierung Tipps, Tricks und Tools f&uuml;r ihre eigenen digitalen Projekte kennenzulernen. <br> 
                     <a href="/angebote"><button class="btn btn-start">Mehr erfahren!</button> </a> 
                 </p>
             </div>
@@ -67,7 +67,7 @@ title: "Projekt"
         </div>
         <div class="col-lg-9 col-lg-offset-1 title">
             <p>
-                Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, begleitet uns bei diesem Vorhaben das <a class="highlight-grey" href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a> aus Berlin, das uns sowohl bei der Konzeption unserer Formate berät, als auch einige Workshop-Durchführungen in Jugendeinrichtungen bis Ende 2017 evaluiert. Die Ergebnisse der Evaluation werden in einem Abschlussbericht unter freier Lizenz veröffentlicht. 
+                Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualit&auml;t unseres Angebots zu sichern, begleitet uns bei diesem Vorhaben das <a class="highlight-grey" href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a> aus Berlin, das uns sowohl bei der Konzeption unserer Formate ber&auml;t, als auch einige Workshop-Durchf&uuml;hrungen in Jugendeinrichtungen bis Ende 2017 evaluiert. Die Ergebnisse der Evaluation werden in einem Abschlussbericht unter freier Lizenz ver&ouml;ffentlicht. 
             </p>
         </div>
     </div>
@@ -85,12 +85,12 @@ title: "Projekt"
             </div>
             <div class="col-md-4"> 
                 <p class="text-left">
-                    Wir veröffentlichen alle Inhalte des Projekts, soweit dies möglich ist, unter freier Lizenz als <a href="https://de.wikipedia.org/wiki/Open_Educational_Resources">Open Educational Resources</a>.
+                    Wir ver&ouml;ffentlichen alle Inhalte des Projekts, soweit dies m&ouml;glich ist, unter freier Lizenz als <a href="https://de.wikipedia.org/wiki/Open_Educational_Resources">Open Educational Resources</a>.
                 </p>
             </div>
             <div class="col-md-4"> 
                 <p class="text-left">
-                    Wir arbeiten überparteilich und unabhängig.
+                    Wir arbeiten &uuml;berparteilich und unabh&auml;ngig.
                 </p>
             </div>
         </div>
