--- a/team/index.html
+++ b/team/index.html
@@ -70,7 +70,12 @@ title: "&uuml;ber uns"
                         <span class="speaker-name"><a class="text__blue"  href="mailto:maria.reimer@okfn.de">Maria Reimer</a> </span>Projektkoordination <br> maria.reimer@okfn.de
                     </p>
                 </div>    
-      
+                <div class="members col-lg-4">
+                    <a href="mailto:juliane.krueger@okfn.de""><img class="img-circle member-avatar" alt="Juliane Krueger" src="/img/avatars/juliane2.jpg"></a>
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span>Projektmanagerin Finanzen<br> juliane.krueger@okfn.de
+                    </p>
+                </div>
 
                 <div class="members col-lg-4">
                     <a href="mailto:nadine.stammen@okfn.de"><img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg"></a>
@@ -86,6 +91,7 @@ title: "&uuml;ber uns"
                         <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter<br> leonard.wolf@okfn.de
                     </p>
                 </div>
+
                 <div class="members col-lg-4">
                     <a href="mailto:moritz.neujeffski@okfn.de"><img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg"></a>
                     <p>
