--- a/team/index.html
+++ b/team/index.html
@@ -73,7 +73,7 @@ title: "&uuml;ber uns"
                 <div class="members col-lg-4">
                     <a href="mailto:juliane.krueger@okfn.de""><img class="img-circle member-avatar" alt="Juliane Krueger" src="/img/avatars/juliane2.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span>Projektmanagerin Finanzen<br> juliane.krueger@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span>Projektassistenz Finanzen<br> juliane.krueger@okfn.de
                     </p>
                 </div>
 
