--- a/projekt/index.html
+++ b/projekt/index.html
@@ -25,17 +25,17 @@ title: "Projekt"
         <h2 class="title text-center">Wir wollen...</h2>
         <div class="col-md-4">
             <p class="text-left">
-                ...  R&auml;ume schaffen, in denen sich Jugendliche ausprobieren k&ouml;nnen, und sie dazu ermutigen, sich mit Hilfe von digitalen Kompetenzen, Werkzeugen &amp; Technologien selbstbestimmt und aktiv an gesellschaftlichen Prozessen zu beteiligen.
+                ...  spielerische R&auml;ume schaffen, in denen sich Jugendliche als Teilhaber einer politischen Gesellschaft ausprobieren k&ouml;nnen, und sie dazu ermutigen, sich mit Hilfe von digitalen Kompetenzen, Werkzeugen &amp; Technologien selbstbestimmt und aktiv an gesellschaftlichen Prozessen zu beteiligen.
             </p>
         </div>
         <div class="col-md-4">
             <p class="text-left">
-              ... in Zeiten von Fake News, Hate Speech und Populismus das Internet für und mit jungen Menschen als positiven Gestaltungsraum zurückerobern und die &ouml;ffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven Jugendlicher bereichern.
+              ... in Zeiten von Fake News, Hate Speech und Populismus das Internet für und mit jungen Menschen als positiven Gestaltungsraum für die politische Öffentlichkeit zurückerobern und die &ouml;ffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven Jugendlicher bereichern.
             </p>
         </div>
         <div class="col-md-4">
            <p class="text-left">
-              ... Mitarbeiter*innen in Jugendeinrichtungen erm&ouml;glichen, neue Zug&auml;nge zu aktuellen Themen kennenzulernen und sie dazu bef&auml;higen, unsere Formate jederzeit eigenst&auml;ndig und unkompliziert durchf&uuml;hren zu k&ouml;nnen.
+              ... Mitarbeiter*innen in Jugendeinrichtungen neue Zug&auml;nge zur Digitalisierung erm&ouml;glichen, deren gesellschaftliche Bedeutung diskutieren und sie dazu bef&auml;higen, unsere Formate jederzeit eigenst&auml;ndig und unkompliziert durchf&uuml;hren zu k&ouml;nnen.
             </p>
         </div>
     </div>
