--- a/impressum/index.html
+++ b/impressum/index.html
@@ -14,7 +14,7 @@ title: "Impressum"
         <h2>{{ page.title }}</h2>
 
         <p>
-        Die Open Knowledge Foundation Deutschland ist ein eingetragener Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite sind, sofern nicht anders angegeben, nach Creative Commons 4.0 Attribution lizensiert.
+        Die Open Knowledge Foundation Deutschland ist ein eingetragener Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite sind, sofern nicht anders angegeben, nach <a href="https://creativecommons.org/licenses/by/4.0/legalcode.de">Creative Commons 4.0 Namensnennung</a> lizensiert.
         </p>
 
         <p>
@@ -27,7 +27,7 @@ title: "Impressum"
         </p>
         
 
-        <p>Illustration: CC-BY-NC-ND Christoph Hoppenbrock</p>    
+        <p>Illustration: <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode.de">CC BY-SA 4.0</a> <a href="http://bildbauer.de/">Christoph Hoppenbrock</a></p>    
 
 
 
