--- a/angebote/index.html
+++ b/angebote/index.html
@@ -37,7 +37,7 @@ title: "Angebote"
                     <div class="panel">
                         <h4>
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                <b>Newsbusters</b>
+                                <b>>Newsbusters</b>
                             </a>
                         </h4>
                         <div id="collapseOne" class="panel-collapse collapse">
