--- a/angebote/index.html
+++ b/angebote/index.html
@@ -91,13 +91,13 @@ title: "Angebote"
                     <div class="panel">
                         <h4>
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-                                <b>> Escape Populism</b>
+                                <b>> Auf Mikas Spuren</b>
                              </a>
                         </h4>
                         <div id="collapseFour" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <p>
-                                    Kann man Populismus entkommen? Im Escape Game werdet ihr in einen Raum gesperrt, aus dem ihr entkommen oder eine Aufgabe erf&uuml;llen m&uuml;sst. So werdet ihr zu Figuren eines real gewordenen Adventure Spiels und m&uuml;sst euch im Team verst&auml;ndigen, um knifflige R&auml;tsel zu l&ouml;sen, die euch auch moralisch auf die Probe stellen!<br>
+                                    Mika ist verschwunden! Die Eltern sind fassungslos. Sie befürchten, dass irgendetwas nicht stimmt - Mika benahm sich in letzter Zeit sehr merkwürdig. Um herauszufinden, wo Mika steckt, habt ihr eine Stunde Zeit, um in seinem Zimmer auf Spurensuche zu gehen und das Rätsel zu lösen!<br>
                                     <b>Thema:</b> Populismus<br>
                                     <b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Escape_Game">Escape Game</a>
                                     <br>
