--- a/angebote/index.html
+++ b/angebote/index.html
@@ -65,7 +65,7 @@ title: "Angebote"
                                     <br>
                                     <b>Thema:</b> Diskussionskultur im Netz<br>
                                     <b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Pen-%26-Paper-Rollenspiel">Digitales Pen&amp;Paper-Rollenspiel</a><br>
-                                    <b>Dauer:</b> 2-8 Stunden
+                                    <b>Dauer:</b> 2 Stunden
                                 </p>
                             </div>
                         </div>
